[gd_scene load_steps=15 format=2]

[ext_resource path="res://Battle.gd" type="Script" id=1]
[ext_resource path="res://DialogueBox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Buttons.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Player_Battle.png" type="Texture" id=4]
[ext_resource path="res://Fonts/FinkwellSmall.tres" type="DynamicFont" id=5]
[ext_resource path="res://Sprites/HealthBar/background.png" type="Texture" id=6]
[ext_resource path="res://Sprites/HealthBar/Fill.png" type="Texture" id=7]
[ext_resource path="res://Fonts/Finkwell.tres" type="DynamicFont" id=8]
[ext_resource path="res://ExitButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Selector.tscn" type="PackedScene" id=10]
[ext_resource path="res://Inv.gd" type="Script" id=11]
[ext_resource path="res://Health.gd" type="Script" id=12]

[sub_resource type="Animation" id=1]
resource_name = "Crit"
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 0, 0, 1 ), Color( 0.0823529, 0.0823529, 0.0823529, 1 ), Color( 0.08, 0.08, 0.08, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CritPopup:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1.31951 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CritPopup:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 0.554785, 4.43828, 1 ),
"update": 0,
"values": [ Vector2( -105, 14 ), Vector2( -105, -50 ), Vector2( -105, -30 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"

[node name="Battle" type="Node2D"]
z_index = 2
script = ExtResource( 1 )

[node name="BackgroundColor" type="ColorRect" parent="."]
margin_top = 1.0
margin_right = 1920.0
margin_bottom = 1081.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="DialogueBox" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 0 )

[node name="Buttons" parent="." instance=ExtResource( 3 )]

[node name="ExitButton" parent="." instance=ExtResource( 9 )]

[node name="PlayerPos" type="Sprite" parent="."]
position = Vector2( 460, 450 )

[node name="PlayerSprite" type="Sprite" parent="PlayerPos"]
position = Vector2( 116, -2 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Formation" type="Position2D" parent="."]

[node name="PlayerStats" type="ColorRect" parent="."]
margin_left = 110.0
margin_top = 50.0
margin_right = 535.0
margin_bottom = 215.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="PlayerStats"]
margin_top = 14.0
margin_right = 425.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )
text = "Player"
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Status" type="Label" parent="PlayerStats"]
margin_left = 274.0
margin_top = 5.0
margin_right = 486.0
margin_bottom = 96.0
rect_scale = Vector2( 0.75, 0.75 )
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.5, 0.7, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.5, 0.7, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp" type="Label" parent="PlayerStats"]
margin_left = 150.0
margin_top = 115.0
margin_right = 275.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 5 )
text = "10/10"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Control" parent="PlayerStats"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarUnder" type="TextureProgress" parent="PlayerStats/Health"]
margin_left = 25.0
margin_top = 75.0
margin_right = 400.0
margin_bottom = 115.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
tint_progress = Color( 0.8, 0, 0, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="PlayerStats/Health"]
margin_left = 25.0
margin_top = 75.0
margin_right = 400.0
margin_bottom = 115.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarOver" type="TextureProgress" parent="PlayerStats/Health"]
visible = false
modulate = Color( 1, 0.5, 1, 1 )
margin_left = 25.0
margin_top = 75.0
margin_right = 400.0
margin_bottom = 115.0
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="PlayerStats/Health"]

[node name="Atk" type="ColorRect" parent="PlayerStats"]
margin_top = 185.0
margin_right = 196.0
margin_bottom = 249.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[node name="Label" type="Label" parent="PlayerStats/Atk"]
margin_left = 16.0
margin_top = 16.0
margin_right = 210.0
margin_bottom = 60.0
custom_fonts/font = ExtResource( 5 )
text = "Atk: "

[node name="Spd" type="ColorRect" parent="PlayerStats"]
margin_top = 270.0
margin_right = 196.0
margin_bottom = 334.0
color = Color( 0.0823529, 0.0823529, 0.0823529, 1 )

[node name="Label" type="Label" parent="PlayerStats/Spd"]
margin_left = 16.0
margin_top = 16.0
margin_right = 210.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 5 )
text = "Spd:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyStats" type="ColorRect" parent="."]
margin_left = 1385.0
margin_top = 50.0
margin_right = 1810.0
margin_bottom = 215.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="EnemyStats"]
margin_top = 14.0
margin_right = 425.0
margin_bottom = 64.0
custom_fonts/font = ExtResource( 8 )
align = 1
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hp" type="Label" parent="EnemyStats"]
margin_left = 150.0
margin_top = 115.0
margin_right = 275.0
margin_bottom = 165.0
custom_fonts/font = ExtResource( 5 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBars" type="Node2D" parent="EnemyStats"]
z_index = 3

[node name="Health" type="Control" parent="EnemyStats/HealthBars"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarUnder" type="TextureProgress" parent="EnemyStats/HealthBars/Health"]
margin_left = 23.0
margin_top = 75.0
margin_right = 398.0
margin_bottom = 115.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="EnemyStats/HealthBars/Health"]
margin_left = 23.0
margin_top = 75.0
margin_right = 398.0
margin_bottom = 115.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarOver" type="TextureProgress" parent="EnemyStats/HealthBars/Health"]
visible = false
margin_left = 23.0
margin_top = 75.0
margin_right = 398.0
margin_bottom = 115.0
value = 100.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="EnemyStats/HealthBars/Health"]

[node name="Health2" type="Control" parent="EnemyStats/HealthBars"]
visible = false
margin_left = 23.0
margin_top = 90.0
margin_right = 63.0
margin_bottom = 130.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="EnemyStats/HealthBars/Health2"]
margin_left = -23.0
margin_top = 64.0
margin_right = 402.0
margin_bottom = 128.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarUnder" type="TextureProgress" parent="EnemyStats/HealthBars/Health2"]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 104.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="EnemyStats/HealthBars/Health2"]
margin_top = 64.0
margin_right = 384.0
margin_bottom = 104.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarOver" type="TextureProgress" parent="EnemyStats/HealthBars/Health2"]
visible = false
margin_top = 64.0
margin_right = 384.0
margin_bottom = 104.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="EnemyStats/HealthBars/Health2"]

[node name="Health3" type="Control" parent="EnemyStats/HealthBars"]
visible = false
margin_left = 23.0
margin_top = 90.0
margin_right = 63.0
margin_bottom = 130.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="EnemyStats/HealthBars/Health3"]
margin_left = -23.0
margin_top = 128.0
margin_right = 402.0
margin_bottom = 192.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarUnder" type="TextureProgress" parent="EnemyStats/HealthBars/Health3"]
margin_top = 128.0
margin_right = 384.0
margin_bottom = 168.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="EnemyStats/HealthBars/Health3"]
margin_top = 128.0
margin_right = 384.0
margin_bottom = 168.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarOver" type="TextureProgress" parent="EnemyStats/HealthBars/Health3"]
visible = false
margin_top = 128.0
margin_right = 384.0
margin_bottom = 168.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="EnemyStats/HealthBars/Health3"]

[node name="Health4" type="Control" parent="EnemyStats/HealthBars"]
visible = false
margin_left = 23.0
margin_top = 90.0
margin_right = 63.0
margin_bottom = 130.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect3" type="ColorRect" parent="EnemyStats/HealthBars/Health4"]
margin_left = -23.0
margin_top = 192.0
margin_right = 402.0
margin_bottom = 256.0
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarUnder" type="TextureProgress" parent="EnemyStats/HealthBars/Health4"]
margin_top = 192.0
margin_right = 384.0
margin_bottom = 232.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBar" type="TextureProgress" parent="EnemyStats/HealthBars/Health4"]
margin_top = 192.0
margin_right = 384.0
margin_bottom = 232.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarOver" type="TextureProgress" parent="EnemyStats/HealthBars/Health4"]
visible = false
margin_top = 192.0
margin_right = 384.0
margin_bottom = 232.0
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="EnemyStats/HealthBars/Health4"]

[node name="Animator" type="AnimationPlayer" parent="EnemyStats"]
anims/Crit = SubResource( 1 )
anims/Idle = SubResource( 2 )

[node name="CritPopup" type="Label" parent="EnemyStats"]
visible = false
margin_left = -105.0
margin_top = -30.0
margin_right = 59.0
margin_bottom = 33.9997
custom_fonts/font = ExtResource( 5 )
text = "Crit!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inv" type="Node2D" parent="."]

[node name="Inv1" type="Sprite" parent="Inv"]
position = Vector2( 192, 640 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 11 )

[node name="SelectorAnchor" type="Position2D" parent="Inv/Inv1"]
position = Vector2( 0, -320 )

[node name="Label" type="Label" parent="Inv/Inv1"]
margin_left = 320.0
margin_top = -320.0
margin_right = 400.0
margin_bottom = -240.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inv2" type="Sprite" parent="Inv"]
position = Vector2( 384, 640 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 11 )

[node name="SelectorAnchor" type="Position2D" parent="Inv/Inv2"]
position = Vector2( 0, -320 )

[node name="Label" type="Label" parent="Inv/Inv2"]
margin_left = 320.0
margin_top = -320.0
margin_right = 400.0
margin_bottom = -240.0
rect_scale = Vector2( 4, 4 )
custom_fonts/font = ExtResource( 5 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Selector" parent="." instance=ExtResource( 10 )]

[node name="PoisonTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="enemy_health_changed" from="." to="EnemyStats/HealthBars/Health" method="_on_Battle_enemy_health_changed"]
[connection signal="enemy_health_changed" from="." to="EnemyStats/HealthBars/Health2" method="_on_Battle_enemy_health_changed"]
[connection signal="enemy_health_changed" from="." to="EnemyStats/HealthBars/Health3" method="_on_Battle_enemy_health_changed"]
[connection signal="enemy_health_changed" from="." to="EnemyStats/HealthBars/Health4" method="_on_Battle_enemy_health_changed"]
[connection signal="game_over" from="." to="." method="_on_game_over"]
[connection signal="health_changed" from="." to="PlayerStats/Health" method="_on_Battle_health_changed"]
[connection signal="health_obscured" from="." to="PlayerStats/Health" method="_on_Battle_health_obscured"]
[connection signal="timeout" from="PoisonTimer" to="." method="_on_PoisonTimer_timeout"]
